# QT_SongPlayer

./: AudioInfo.h  AudioInfoBox.qml  CMakeLists.txt  Main.qml  PlayerController.cpp  PlayerController.h  README.md  main.cpp
